2016-02-23  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/pyplots/{plot_phase_sinus.py,plot_qualitative1.py}:

	Fixed import of function figsize.

	* doc/pyplots/plot_qualitative2.py:

	Fixed import of function figsize. Also increased number of used colors to
	show the whole colormap.

2016-02-23  Oliver Lemke  <olemke@core-dump.info>

	* environment.yml:

	Added dependency file for easy environment creation with
	'conda env create'.

2016-02-23  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/modules.rst: Added plots to list of modules.

	* doc/plots.rst: Documentation for module typhon.plots.

	* typhon/cm/__init__.py: Moved function figsize to typhon.plots.

	* typhon/plots: New module to provide plotting related functions.

	* typhon/plots/__init__.py: Currently providing the function figsize.

2016-02-19  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/cm.rst: Added a second example plot for Phase colormap.

	* doc/pyplots/plot_phase_sinus.py:

	New example plot to demonstrate the Phase colormap using sinus functions.

	* doc/pyplots/plot_qualitative1.py, doc/pyplots/plot_qualitative2.py:

	The figure size is now calculated using typhon.cm.figsize.

	* typhon/arts/xml/__init__.py (load): Added example to docstring.

	* typhon/cm/__init__.py (figsize):

	Added function to construct figure sizes matching the golden ration.

2016-02-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Post-upload version bump to 0.2.6.

2016-02-18  Lukas Kluft <lukas.kluft@gmail.com>

	* typhon/__init__.py: Do not import cm automatically.

	The colormap module has to be imported directly using 'import typhon.cm'.

	* doc/pyplots/plot_density.py doc/pyplots/plot_phase.py
	doc/pyplots/plot_qualitative1.py doc/pyplots/plot_qualitative2.py
	doc/pyplots/plot_speed.py doc/pyplots/plot_temperature.py:

	Added the direct import of typhon.cm to the example plots.

2016-02-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Post-upload version bump to 0.2.5.
